added contact and about page

--- a/css/style.css
+++ b/css/style.css
@@ -3276,7 +3276,7 @@ section.about-me-section.skills-col .about-me-box .personal-info {
 }
 section.story-skills-section {
   padding: 120px 0;
-  background: url('../upload/banners/7.jpg') 0 0;
+  background: url("https://lh3.googleusercontent.com/ZkF-T_6weFm_7J9LKaQ82GM1NIvmbKrTxEhDeIx7UGozzIhSXkf2N-hZ4ECMmQG3EBhDenR0RyzR1CBj4oQpROkI8qEtEaqW7kG4z41hQ4inF4CPgYF-LAAcympMObC5His0sAIb3pFou3rGh44x_J_rjkBkD05txMmcx4CeuYexddOsajrm1FfT58q7as5A4KXWQBtgrAO4AiiTutWOKjmNtYJcDV-1QMD5aqv2Ao9lztxjo40PAcnwH3lUiWbkJTXT0zlL4pD9dEOEQgh-n6DiOYqEbJaFrvGNQmBGNCf-v2EWtxHBc3-R8KdsTnAyw1u5tHdrBKdhYELPVb0-8IU4LJfE28nwyN-7HGIFaBIUfa5V5xZwRkbCnd5ZZJK2CnKI59iv-VSnqIXDOfdqJWXZGAcVW0eOH_DXWmjIP9k-C_1rqbdA-zOVPm8D6k8XnAUPt__Bo7xB0lit0PBdVRamDsNJXDhw-gGIu-71tQy9Va1vFpoqTE81NcwicioRARm8gzPqhPIx5oV-evOqcjF8jATCsPGxCcFTaqptAiapFopAK-MlpmnkHg-ZdIjmcVtfKZG6XdPLXxg0TM9w3Vv4rUyJVMiAL__DUOFwNK2DPHu1=w1616-h1080-no") 0 0;
   background-size: cover;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -4312,7 +4312,7 @@ form#review-form input[type="submit"]:hover {
 }
 .contact-info-section {
   padding: 275px 0 260px;
-  background: url('../upload/banners/3.jpg') 0 0;
+  background: url("https://lh3.googleusercontent.com/oz1uXkO-oBAp5xjvn4o3DfginTeO6F45HR-x27fzQ2K6OKNUs1yZv7VX-Z3FTTvp4HRxaYhSVPcvyokfs08X_6gu-Qe4QZsf_3TDMY4qxFuLwtBUW5go5Ynn4_fJA1qI7aKz-kUy636gUb73_Kn4nI-2-c1k5Xe-MTbKazLeQDX7IgFJvsLANbmOh4SJCueyBacUxgx8SL7oi90ffF61ESmzeaYuHf8jxeZyX9NjNGGN3LRPNQBR1E9bhecrCVT6ZxR8GBfvGKBTnHybwkYPywW9AwmG3UwsV-LoXCLKmvj0eUqvREfUZo4Aw2-mUvz6W9NzUmDXPq_4G7XM64EQVaF7iuSja1-gLgesOJHR6wQdxP3bFm-9d3yn83xXLGAwwygztwDUHBeeg24mMsTaG_uBmxraeeZOLtXBPMrNp0SceNbqpLmVb_6T5PvOaIFmHsTFV2i0cSqA3KbzzvFbdKNdDpASUA20byiwHkwpVmVuFB90qMT_PCvsc-P0gHm2EaMquDQbywGzd4-YseBZ0IX342UCapxmlZnzkASm8hhU05oLI3_yQhjR6jFt-9naj9xwbLPpx2T3q8TgrPKuDHlmhKEuZVNTAfGEiqf2KW3bsZSl=w1616-h1080-no") 0 0;
   background-size: cover;
   -webkit-background-size: cover;
   -moz-background-size: cover;
